Typos Corrected and Building of the form

--- a/schotborgh_chuck_project1/additem.html
+++ b/schotborgh_chuck_project1/additem.html
@@ -22,59 +22,65 @@
     </head>
     <!-- Document Body -->
      <body>
-      <h1>Forgive Someone Senario</h1>
-        <p>A social, relational, and interpersonal application that allows one to forgive in fun comical manner!</p>
-            <h2>Forgive someone now</h2>
+      <h1>I Forgive APP (beta)</h1>
+        <p>A social, relational, and interpersonal application that allows one to forgive in a fun comical manner!</p>
+            <!-- <h2>Forgive someone now</h2> -->
     <form action="#" method="get">   
         <fieldset>
-            <legend>Information</legend>
+            <legend>Login Information</legend>
             <ul>
                 <li><label for="fname">First Name:</label><input type="text" id="fname" /></li>
+                <li><label for="Lname">Last Name:</label><input type="text" id="lname" /></li>
                 <li><label for="pword">Password:</label><input type="password" id="pword" /></li>
-                <li><label for"cword">Confirm Password (Disabled):</label><input type="password" id="cword" disabled /></li>
+                <!-- <li><label for"cword">Confirm Password (Disabled):</label><input type="password" id="cword" disabled /></li>-->
                 <li><label for="email">Email:</label><input email="text" id="email" placeholder="example@email.com" /></li>
-                <li><label for="url">Fav Website:</label><input type="url" id="url" placeholder="www.google.com"/></li>
+                <li><label for="url">Post to My Blog or Website:</label><input type="url" id="url" placeholder="www.google.com"/></li>
             </ul>
       </fieldset>
       <fieldset>
-        <legend>Questions</legend>
+        <legend>Build Senario</legend>
             <ul>
                 <li>
-                    Check your favorites:
+                    Rate your level of rage:
                     <ul>
-                        <li><input type="checkbox" checked value="Pepsi"id="pepsi"/><label for="pepsi">Pepsi</label></li>
-                        <li><input type="checkbox" value="Pepsi" id="pepsi"/><label for="pepsi">Pepsi</label></li>
-                        <li><input type="checkbox" value="Pepsi" id="pepsi"/><label for="pepsi">Pepsi</label></li>
-                        <li><input type="checkbox" value="Pepsi" id="pepsi"/><label for="pepsi">Pepsi</label></li>
+                        <li><input type="checkbox" checked value="Red Level"id="Red Level"/><label for="Red Level">So angry my eyes are bulging Red!</label></li>
+                        <li><input type="checkbox"  value="yellow Level"id="yellow Level"/><label for="Yellow Level">So angry I want to get even!</label></li>
+                        <li><input type="checkbox"  value="Green Level"id="Green Level"/><label for="Green Level">So angry I want to use a few choice words!</label></li>
                     </ul>
                 </li>
-            <li>Are you male or female?:
+            <li>Who or what offended you?:
                     <ul>
-                        <li><input type="radio" value= "Male" id="male"name="sex"/><label for="male">Male</label></li>
+                        <li><input type="radio" checked value= "Male" id="male"name="sex"/><label for="male">Male</label></li>
                         <li><input type="radio" value= "Female" id= "female" name="sex" /><label for="female">Female</label></li>
-                        <li><input type="radio" value= "Unknown" id= "unknown" name="sex" /><label for="unknown">I don't want you to know</label></li>
+                        <li><input type="radio" value= "Unknown" id= "unknown" name="sex" /><label for="unknown">I wish I knew who it was</label></li>
                     </ul>
-                </li>            
+                </li>
+            <li><label for="comments"> Describe your feelings about the situation</label><textarea id="coments"></textarea></li>
                     <li>
-                        <label for="travel"> Preferred Method of travel</label>
+                        <label for="travel"> Preferred Method of Forgivness</label>
                         <select id="travel">
-                            <optgroup label="Self Powered Modes">
-                                <option value= "walk">Walk</option>
-                                <option value= "Bike">bike</option>
+                            <optgroup label="Violent Aproach Modes">
+                                <option value= "Explosions">Explosions</option>
+                                <option value= "Burning">Burning</option>
                             </optgroup>
-                            <optgroup label="Machine Powered Modes">
-                                <option value= "Car">Car</option>
-                                <option value= "Bus">Bus</option>
-                                <option value= "Train">Train</option>
-                                <option value= "Plane">Plane</option>
+                            <optgroup label="Passive Aproach Modes">
+                                <option value= "Toilet paper">Toilet paper</option>
+                                <option value= "Dog Doo Doo">Dog Doo Doo</option>
+                                <option value= "Madlib">Madlib</option>
+                                <option value= "Practical Jokes">Practical Jokes</option>
+                            </optgroup>
+                            <optgroup label="Peaceful Aproach Modes">
+                                <option value= "Message in a Bottle">Message in a Bottle</option>
+                                <option value= "Write a Letter">Write a Letter</option>
+                                <option value= "Swallow your Feelings">Swallow your Feelings"</option>
+                                <option value= "Addictive Behavoir">Addictive Behavoir</option>
                             </optgroup>
                         </select>
                     </li>
-                    <li><label for="comments"> What is your Favorite Vacation?</label><textarea id="coments"></textarea></li>
-                    <li><input type="hidden" value="true"/></li>
                  </ul>
             <fieldset>
-            <input type="submit" value="send it already!" />
+            <input type="submit" value=" I'm Ready to forgive!" />
         </form>
     </body>
+             <a href="#.html">Clear Stored Data</a>        <a href="#.html">Display Data</a>
 </html>
