Ready for Flowcharting JScript

--- a/schotborgh_chuck_project1/index.html
+++ b/schotborgh_chuck_project1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Chuck Schotborgh  -->
+<!--Chuck Schotborgh Visual Frameworks 09/2011 project 1 -->
 <!-- HTML TAG -->
 <html>
     <head>
