Correction for Loops

--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -69,7 +69,7 @@
             <fieldset>
             <legend class="LabelColor"><span><strong>Panic level of rage:</strong></span></legend>                
                 <ul>
-                    <li class="DataColor"><input type="checkbox" value="fav" id="Panic"><label for="level">So angry my eyes are bulging Red!</label></li>
+                    <li class="DataColor"><input type="checkbox" value="Yes" id="fav"><label for="fav">Panic!</label></li>
                 </ul>
             </fieldset>
             <fieldset>            
