Corrections + Local Storage is still not working

--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -20,28 +20,28 @@
     <!-- Document Body -->
      <body>
             <fieldset>
-            <header class="LabelColor"><span><h1>I Forgive APP (beta)</h1></span></header>                                
+            <header class="LabelColor"><h1>I Forgive APP (beta)</h1></header>                                
                 <p><h3>A social, relational, and interpersonal application that allows one to forgive in a fun comical manner!</h3></p>
             </fieldset> 
         <form action="#" method="get">
             <fieldset>
-                    <span><a href="#.html">Clear Stored Data</a></span>
-                    <span><a href="#.html">Display Data</a></span>
+                   <a href="#.html">Clear Stored Data</a>
+                   <a href="#.html">Display Data</a>
             </fieldset> 
             <fieldset>
-              <legend class="TitleColor"><strong>Login Information</strong></span></legend>
+              <legend class="TitleColor"><strong>Login Information</strong></legend>
                 <ul> 
-                    <li class="DataColor"><span><p><label for="uname">User Name:</label><br><input name="UserName" type="text" id="uname"></p></span></li>
-                    <li class="DataColor"><span><p><label for="pword">Password:</label><br><input type="password" id="pword"></p></span></li>
-                    <li class="DataColor"><span><p><label for="email">Email:</label><br><input email="text" id="email" placeholder="example@email.com"></p></span></li>
-                    <li class="DataColor"><span><p><label for="url">Post to My Blog or Website:</label><br><input type="text" id="url" placeholder="www.google.com"></p></span></li>
-                    <li class="DataColor"><span><p><label for="date">Date Added:</label><br><input type="date" id="date"></p></span></li>
+                    <li class="DataColor"><p><label for="uname">User Name:</label><br><input name="UserName" type="text" id="uname"></p></li>
+                    <li class="DataColor"><p><label for="pword">Password:</label><br><input type="password" id="pword"></p></li>
+                    <li class="DataColor"><p><label for="email">Email:</label><br><input email="text" id="email" placeholder="example@email.com"></p></li>
+                    <li class="DataColor"><p><label for="url">Post to My Blog or Website:</label><br><input type="text" id="url" placeholder="www.google.com"></p></li>
+                    <li class="DataColor"><p><label for="date">Date Added:</label><br><input type="date" id="date"></p></li>
                 </ul>
             </fieldset>
             <fieldset>
-                <legend class="TitleColor"><span><strong>Build Senario</strong></span></legend>
-                    <label class="LabelColor"><span><p><label for="comments" ><strong> Describe your feelings about the situation:</strong></p></span></label>
-                        <span class="DataColor"><p><label for="notes"></label><textarea id="notes"></textarea></span></p>
+                <legend class="TitleColor"><strong>Build Senario</strong></legend>
+                    <label class="LabelColor"><p><label for="comments" ><strong> Describe your feelings about the situation:</strong></p></label>
+                        <span class="DataColor"><p><label for="notes"></label><textarea id="notes"></textarea></p>
                     <Label class="LabelColor"><strong><label for="forgive">Choose Metaphorical Method to process your forgiveness:</label></strong></li>
             <select id="group">
                 <optgroup label="Violent Aproach Modes">
@@ -63,17 +63,17 @@
             </select>
                 <br><br>
             <fieldset>
-            <legend class="LabelColor"><span><strong>Level of Emotional Pain Scale of 1-10!</strong></span></legend>
-                    <span class="ListColorOdd"><span><label for="LOEP">Range<small>|1|2|3|4|5|6|7|8|9|10|</small></label><br><input type="range" min="1" max="10" id="loep"></span>
+            <legend class="LabelColor"><strong>Level of Emotional Pain Scale of 1-10!</strong></legend>
+                    <span class="ListColorOdd"><label for="LOEP">Range<small>|1|2|3|4|5|6|7|8|9|10|</small></label><br><input type="range" min="1" max="10" id="loep">
             </fieldset>
             <fieldset>
-            <legend class="LabelColor"><span><strong>Panic level of rage:</strong></span></legend>                
+            <legend class="LabelColor"><strong>Panic level of rage:</strong></legend>                
                 <ul>
                     <li class="DataColor"><input type="checkbox" value="Yes" id="fav"><label for="fav">Panic!</label></li>
                 </ul>
             </fieldset>
             <fieldset>            
-            <legend class="LabelColor"><span><strong>Who or what are you bitter towards?</strong></span></legend>                
+            <legend class="LabelColor"><strong>Who or what are you bitter towards?</strong></legend>                
                 <ul>
                     <li class="DataColor"><input type="radio" value="Unknown" id="unknown" name="sex"><label for="unknown">I wish I knew who or what it was!</label></li>
                     <li class="DataColor"><input type="radio" value="Male" id="male" name="sex"><label for="male">Male</label></li>
@@ -81,7 +81,7 @@
                 </ul>  
             </fieldset>
             <fieldset>
-                <legend class="TitleColor"><span><strong>Go for it!</strong></span></legend>
+                <legend class="TitleColor"><strong>Go for it!</strong></legend>
                 <ul>
                     <input type="submit" value="I'm Ready to forgive!"id="submit" />
                 </ul>
