Still Isn't running Local Storage Scenario

--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -9,7 +9,7 @@
         <!-- <meta name="robots" content="index, follow" /> -->
         <meta name="robots" content="noindex, nofollow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-        <meta name="viewport" content="target-density=device-dpi" />
+        <!-- <meta name="viewport" content="target-density=device-dpi" />-->
         <meta name="HandheldFreindly" content="true" />     
         <meta name="MobileOptimized" content="320" />
         
@@ -25,8 +25,9 @@
             </fieldset> 
         <form action="#" method="get">
             <fieldset>
-                   <a href="#.html">Clear Stored Data</a>
-                   <a href="#.html">Display Data</a>
+                   <a href="#" id="clear">Clear Stored Data</a>
+                   <a href="#" id="displayLink">Display Data</a>
+                   <a href="additem.html" id="addNew" style="display:none;">Add New Item</a>
             </fieldset> 
             <fieldset>
               <legend class="TitleColor"><strong>Login Information</strong></legend>
