--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -9,7 +9,7 @@
         <!-- <meta name="robots" content="index, follow" /> -->
         <meta name="robots" content="noindex, nofollow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-        <!-- <meta name="viewport" content="target-density=device-dpi" />-->
+        <meta name="viewport" content="target-density=device-dpi" />
         <meta name="HandheldFreindly" content="true" />     
         <meta name="MobileOptimized" content="320" />
         
