--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -6,88 +6,43 @@
         <meta charset="utf-8"/>
         <meta name="description" content="I Forgive APP (beta)" />   
         <meta name="keywords" content="HTML5, mobile development, Full Sail University" />
-        <!-- <meta name="robots" content="index, follow" /> -->
+        <meta name="robots" content="index, follow" />
         <meta name="robots" content="noindex, nofollow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
-        <meta name="viewport" content="target-density=device-dpi" />
-        <meta name="HandheldFreindly" content="true" />     
-        <meta name="MobileOptimized" content="320" />
-        
         <title>I Forgive APP (beta)</title>
-         <link href="css/styles.css" rel="stylesheet" type="text/css" />
-        
+         <link href="css/styles.css" rel="stylesheet" type="text/css" />  
     </head>
-    <!-- Document Body -->
      <body>
-            <fieldset>
-            <header class="LabelColor"><h1>I Forgive APP (beta)</h1></header>                                
-                <p><h3>A social, relational, and interpersonal application that allows one to forgive in a fun comical manner!</h3></p>
-            </fieldset> 
-        <form action="#" method="get">
-            <fieldset>
-                   <a href="#" id="clear">Clear Stored Data</a>
-                   <a href="#" id="displayLink">Display Data</a>
-                   <a href="additem.html" id="addNew" style="display:none;">Add New Item</a>
-            </fieldset> 
-            <fieldset>
-              <legend class="TitleColor"><strong>Login Information</strong></legend>
-                <ul> 
-                    <li class="DataColor"><p><label for="uname">User Name:</label><br><input name="UserName" type="text" id="uname"></p></li>
-                    <li class="DataColor"><p><label for="pword">Password:</label><br><input type="password" id="pword"></p></li>
-                    <li class="DataColor"><p><label for="email">Email:</label><br><input email="text" id="email" placeholder="example@email.com"></p></li>
-                    <li class="DataColor"><p><label for="url">Post to My Blog or Website:</label><br><input type="text" id="url" placeholder="www.google.com"></p></li>
-                    <li class="DataColor"><p><label for="date">Date Added:</label><br><input type="date" id="date"></p></li>
+        <header><h1>I Forgive APP (beta)</h1></header>                                
+        <span><h3>A social, relational, and interpersonal application that allows one to forgive in a fun comical manner!</h3></span>
+        <nav>
+            <a href="#" id="clear">Clear Stored Data</a>
+            <a href="#" id="displayLink">Display Data</a>
+            <a href="additem.html" id="addNew" style="display:none;">Add New Item</a>
+        </nav>  
+        <form action="#" method="post" id="contactForm" />
+            <fieldset id="contactFieldset">
+              <legend><strong>Login Information</strong></legend>
+              <span>* fields are required.</span>
+                <ul id="errors"></ul>
+                <ul id="questions">
+                    <li id="select"><label for="group">Add To Group:</label><br /></li>
+                    <li><p><label for="fname">*First Name:</label><input type="text" id="fname"/></p></li>
+                    <li><p><label for="lname">*Last Name:</label><input type="text" id="lname"/></p></li>
+                    <li><p><label for="email">Email:</label><input type="email" id="email"/></p></li>
+                    <li><p><label for="sex">Sex:</label>
+                        <ul class= "checkbox">
+                            <li><input type="radio" id="male" value="Male" name="sex" /><label for="Male"</label></li>
+                            <li><input type="radio" id="female" value="Female" name="sex" /><label for="Female"</label></li>
+                        </ul>
+                    <li>
+                    <li><input type="checkbox" id="fav" value="Yes" class="checkbox"  /><label for="fav">Save as Favorite?</label></li>
+                    <li><label for="IQ">IQ</label><input type="range" min="70" max="140" id="iq" /></li>
+                    <li><label for="date">Date Added</label><input type="date" id="date" /></li>
+                    <li><label for="note">Notes: </label><textarea id="notes"></textarea></li>
                 </ul>
             </fieldset>
-            <fieldset>
-                <legend class="TitleColor"><strong>Build Senario</strong></legend>
-                    <label class="LabelColor"><p><label for="comments" ><strong> Describe your feelings about the situation:</strong></p></label>
-                        <span class="DataColor"><p><label for="notes"></label><textarea id="notes"></textarea></p>
-                    <Label class="LabelColor"><strong><label for="forgive">Choose Metaphorical Method to process your forgiveness:</label></strong></li>
-            <select id="group">
-                <optgroup label="Violent Aproach Modes">
-                    <option value="Explosions">Explosions</option>
-                    <option value="Burning">Burning</option>
-                </optgroup>
-                <optgroup label="Passive Aproach Modes">
-                    <option value="Toilet paper">Toilet paper</option>
-                    <option value="Dog Doo Doo">Dog Doo Doo</option>
-                    <option value="Madlib">Madlib</option>
-                    <option value="Practical Jokes">Practical Jokes</option>
-                </optgroup>
-                <optgroup label="Peaceful Aproach Modes">
-                    <option value="Message in a Bottle">Message in a Bottle</option>
-                    <option value="Write a Letter">Write a Letter</option>
-                    <option value="Swallow your Feelings">Swallow your Feelings</option>
-                    <option value="Addictive Behavoir" selected>Addictive Behavoir</option>
-                </optgroup>
-            </select>
-                <br><br>
-            <fieldset>
-            <legend class="LabelColor"><strong>Level of Emotional Pain Scale of 1-10!</strong></legend>
-                    <span class="ListColorOdd"><label for="LOEP">Range<small>|1|2|3|4|5|6|7|8|9|10|</small></label><br><input type="range" min="1" max="10" id="loep">
-            </fieldset>
-            <fieldset>
-            <legend class="LabelColor"><strong>Panic level of rage:</strong></legend>                
-                <ul>
-                    <li class="DataColor"><input type="checkbox" value="Yes" id="fav"><label for="fav">Panic!</label></li>
-                </ul>
-            </fieldset>
-            <fieldset>            
-            <legend class="LabelColor"><strong>Who or what are you bitter towards?</strong></legend>                
-                <ul>
-                    <li class="DataColor"><input type="radio" value="Unknown" id="unknown" name="sex"><label for="unknown">I wish I knew who or what it was!</label></li>
-                    <li class="DataColor"><input type="radio" value="Male" id="male" name="sex"><label for="male">Male</label></li>
-                    <li class="DataColor"><input type="radio" value="Female" id="female" name="sex"><label for="female">Female</label></li>
-                </ul>  
-            </fieldset>
-            <fieldset>
-                <legend class="TitleColor"><strong>Go for it!</strong></legend>
-                <ul>
-                    <input type="submit" value="I'm Ready to forgive!"id="submit" />
-                </ul>
-            </fieldset>
-            <p></p>
+            <input type="submit"Save Contact" id="submit" /><br />
         </form>
         <script src="js/main.js" type="text/javascript"></script>
     </body>
