--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -10,7 +10,7 @@
         <meta name="robots" content="noindex, nofollow" />
         <meta name="viewport" content="user-scalable=no, width=device-width" />
         <title>I Forgive APP (beta)</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css" />  
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />  
     </head>
     <body>
         <header><h1>I Forgive APP (beta)</h1></header>                                
@@ -20,23 +20,22 @@
             <a href="#" id="displayLink">Display Data</a>
             <a href="additem.html" id="addNew" style="display:none;">Add New Item</a>
         </nav>  
-        <form action="#" method="post" id="contactForm" />
-            <fieldset id="contactFieldset">
+        <form action="#" method="post" id="contactForm" 
+            <fieldset id="contactFieldset" 
               <legend><strong>Login Information</strong></legend>
               <span>* fields are required.</span>
                 <ul id="errors"></ul>
                 <ul id="questions">
-                    <li id="select"><label for="group">Add To Group:</label><br /></li>
-                    <li><p><label for="fname">*First Name:</label><input type="text" id="fname"/></p></li>
-                    <li><p><label for="lname">*Last Name:</label><input type="text" id="lname"/></p></li>
-                    <li><p><label for="email">Email:</label><input type="email" id="email"/></p></li>
-                    <li><p><label for="sex">Sex:</label>
-                        <ul class= "checkbox">
+                    <li id="select"><label for="group">*Add To Group:</label><br /></li>
+                    <li><label for="fname">*First Name:</label><input type="text" id="fname" /></li>
+                    <li><label for="lname">*Last Name:</label><input type="text" id="lname" /></li>
+                    <li><label for="email">*Email:</label><input type="email" id="email" /></li>
+                    <li><label for="sex">Sex: </label>
+                        <ul class="checkbox">
                             <li><input type="radio" id="male" value="Male" name="sex" /><label for="Male"</label></li>
                             <li><input type="radio" id="female" value="Female" name="sex" /><label for="Female"</label></li>
                         </ul>
-                    <li>
-                    <li><input type="checkbox" id="fav" value="Yes" class="checkbox"  /><label for="fav">Save as Favorite?</label></li>
+                    </li>                    <li><input type="checkbox" id="fav" value="Yes" class="checkbox"  /><label for="fav">Save as Favorite?</label></li>
                     <li><label for="IQ">IQ</label><input type="range" min="70" max="140" id="iq" /></li>
                     <li><label for="date">Date Added</label><input type="date" id="date" /></li>
                     <li><label for="note">Notes: </label><textarea id="notes"></textarea></li>
@@ -44,6 +43,6 @@
             </fieldset>
             <input type="submit"Save Contact" id="submit" /><br />
         </form>
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="main.js" type="text/javascript"></script>
     </body>
 </html>
