--- a/schotborgh_chuck_project2/additem.html
+++ b/schotborgh_chuck_project2/additem.html
@@ -35,14 +35,16 @@
                             <li><input type="radio" id="male" value="Male" name="sex" /><label for="Male"</label></li>
                             <li><input type="radio" id="female" value="Female" name="sex" /><label for="Female"</label></li>
                         </ul>
-                    </li>                    <li><input type="checkbox" id="fav" value="Yes" class="checkbox"  /><label for="fav">Save as Favorite?</label></li>
+                    </li>
+                    <li><input type="checkbox" id="fav" value="Yes" class="checkbox"  /><label for="fav">Save as Favorite?</label></li>
                     <li><label for="IQ">IQ</label><input type="range" min="70" max="140" id="iq" /></li>
                     <li><label for="date">Date Added</label><input type="date" id="date" /></li>
                     <li><label for="note">Notes: </label><textarea id="notes"></textarea></li>
                 </ul>
             </fieldset>
-            <input type="submit"Save Contact" id="submit" /><br />
+            <input type="submit" value="Save Contact" id="submit" /><br />
         </form>
-        <script src="main.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+    
     </body>
 </html>
